--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app: accounts
     spec:
       containers:
-      - image: us.icr.io/sn-labs-jewall009/accounts:1
+      - image: MAGE_NAME_HERE
         name: accounts
         resources: {}
         env:
